Every row of a tree carries its commands, and each one wears its mark
A menu item gains an icon, and it is a glyph rather than a picture: the mark
comes from the same atlas the label does, so it takes the text's colour and
scales with zoom for free, and a menu whose items all decline one is drawn
exactly as a menu with no icons at all. MenuSink keeps its old two-argument
forms as defaults over the new one, so nothing that already builds a menu has
to say anything about marks.

TreeView puts that to work. Expand and Collapse stop being wiring inside the
widget and become Actions -- a named type with an icon, a label, a body told
which item it ran on, and predicates for when it is shown and when it is
merely greyed. An application contributes its own the same way the tree
contributes those two, so "Open", "Open folder" and "Delete" are peers of the
commands the tree already had rather than a second menu bolted beside them.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>